# llvm-project

clang-tools-extra/: CMakeLists.txt
clang-tools-extra/clang-tidy/hicpp/: ExceptionBaseclassCheck.cpp
clang-tools-extra/clangd/refactor/: Tweak.cpp  Tweak.h
clang-tools-extra/clangd/unittests/: TweakTests.cpp
clang-tools-extra/dump-by-access/: CMakeLists.txt  DumpByAccess.cpp
clang-tools-extra/unittests/clangd/: Annotations.cpp
clang/docs/: ReleaseNotes.rst
clang/lib/AST/: ASTImporter.cpp  CMakeLists.txt  ComputeDependence.cpp  DeclTemplate.cpp  Expr.cpp  ExprCXX.cpp  ExprClassification.cpp  ExprConstant.cpp  ExprObjC.cpp  ItaniumMangle.cpp  NestedNameSpecifier.cpp  ODRHash.cpp  StmtPrinter.cpp  StmtProfile.cpp  TemplateBase.cpp  TemplateName.cpp  TextNodeDumper.cpp
clang/lib/Lex/: Preprocessor.cpp
clang/lib/Parse/: ParseDecl.cpp  ParseExpr.cpp
clang/lib/Sema/: SemaDecl.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaOverload.cpp  SemaType.cpp  TreeTransform.h
clang/lib/Serialization/: ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp  TemplateArgumentHasher.cpp
clang/test/AST/: ast-dump-expr-errors.cpp  ast-dump-recovery.cpp
clang/test/Index/: getcursor-recovery.cpp
clang/test/Modules/: pr83237.cppm
clang/test/Parser/: cxx-concepts-ambig-constraint-expr.cpp  objcxx11-invalid-lambda.cpp
clang/test/SemaOpenCLCXX/: address-space-references.cl
clang/tools/: CMakeLists.txt
clang/unittests/Tooling/Syntax/: CMakeLists.txt  TokenBufferTest.cpp  TokensTest.cpp  TreeTest.cpp
(+53 files in other folders)
